# degiro-connector

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: linting.yml  publish.yml  python-app.yml  python-publish.yml
config/: config_template.json
degiro_connector/: README.md
degiro_connector/core/: exceptions.py
degiro_connector/core/abstracts/: abstract_action.py
degiro_connector/core/constants/: headers.py  timeouts.py  urls.py
degiro_connector/core/helpers/: lazy_loader.py  pb_handler.py
degiro_connector/core/models/: model_session.py  (+1 more)
degiro_connector/migration/: from_0_1_3_to_1_0_0.py  from_1_0_10_to_2_0_0.py  from_1_0_4_to_1_0_5.py  from_2_0_2_to_2_0_3.py
degiro_connector/quotecast/: api.py  basic.py  relay.py  utilities.py
degiro_connector/trading/: api.py  basic.py  relay.py  utilities.py
examples/quotecast/: chart.py  chart_format.py  connection.py  parse_realtime_data.py  realtime_data.py  realtime_one_shot.py  realtime_poller.py  relay_client.py  relay_server.py  update.py
examples/trading/: account_infos.py  account_overview.py  account_report.py  agenda.py  cash_account_report.py  client_details_table.py  client_infos.py  company_profile.py  company_ratios.py  config_table.py  connection.py  connection_2fa.py  connection_otp.py  estimates_summaries.py  favorite_create.py  favorite_delete product.py  favorite_delete.py  favorite_delete_product.py  favorite_get.py  favorite_get_underlyings.py  favorite_move.py  favorite_put_product.py  favorite_rename.py  favourite_get.py  favourite_list_create.py  favourite_list_delete product.py  favourite_list_delete.py  favourite_list_get.py  favourite_list_move.py  favourite_list_put_product.py  favourite_list_update.py  favourites_list.py  favourites_lists.py  financial_statements.py  latest_news.py  logout.py  news_by_company.py  note_create.py  note_delete.py  note_edit.py  (+18 more)
protos/: README.md
quotecast/: api.py  basic.py  utilities.py
quotecast/applications/: cli.py
quotecast/constants/: __init__.py  endpoint.py  endpoints.py  headers.py  urls.py
quotecast/helpers/: metric_handler.py  metrics_parser.py  pb_handler.py  pickle_handler.py  raw_response_parser.py
quotecast/models/: connection_storage.py  metric_list_storage.py  metrics_storage.py  new_quotecast_parser.py  quotecast_parser.py  raw_metric_parser.py  session_storage.py  sessions_storage.py
quotecast/pb/: quotecast_pb2.py
tests/: README.md  conftest.py  test_fixtures.py
tests/degiro_connector/: conftest.py  test_config_fixtures.py
tests/quotecast/: test_integration.py  test_quotecast.py
tests/trading/: conftest.py  test_integration.py  test_trading.py  test_trading_network.py
trading/: api.py  basic.py  utilities.py
trading/applications/: cli.py
trading/constants/: __init__.py  headers.py  urls.py
trading/helpers/: order_parser.py  payload_handler.py  transaction_parser.py  update_parser.py
trading/models/: connection_storage.py  session_storage.py  sessions_storage.py
trading/pb/: trading_pb2.py
(+170 files in other folders)
