[tool.poetry]
authors = ["Chavithra PARANA <chavithra@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
description = "This is yet another library to access Degiro's API."
license = "BSD-3-Clause"
name = "degiro-connector"
packages = [
    { include = "degiro_connector" },
]
readme = "README.md"
repository = "https://github.com/chavithra/degiro-connector"
version = "2.0.14"

[tool.poetry.dependencies]
python = "^3.7.1"
grpcio = "^1.41.1"
onetimepass = "^1.0.1"
protobuf = "^3.19.1"
requests = "^2.26.0"
wrapt = "^1.12.1"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
grpcio-tools = "^1.38.1"
types-protobuf = "^3.17.4"
types-requests = "^2.25.9"
mypy-protobuf = "^2.10"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"