[tool.poetry]
authors = ["Chavithra PARANA <chavithra@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
description = "This is yet another library to access Degiro's API."
license = "BSD-3-Clause"
name = "degiro-connector"
packages = [
    { include = "degiro_connector" },
]
readme = "README.md"
repository = "https://github.com/chavithra/degiro-connector"
version = "3.0.26"

[tool.poetry.dependencies]
python = "^3.10"
onetimepass = "^1.0.1"
requests = "^2.31.0"
pydantic = "^2.0.3"
polars = "^0.20.2"
wrapt = "^1.14.1"
orjson = "^3.9.10"
isodate = "^0.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^7.2.0"
black = "^24.3.0"
mypy = "^0.991"
types-requests = "^2.28.11"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"