[project]
authors = [
    {email = "chavithra@gmail.com", name = "Chavithra PARANA"},
]
name = "degiro-connector"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "isodate==0.6.1",
    "orjson>=3.11.3",
    "pydantic==2.0.3",
    "pyotp>=2.9.0",
    "requests>=2.32.5",
    "wrapt==1.14.1",
]
description = "This is yet another library to access Degiro's API."
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"
version = "3.0.32"

[project.urls]
repository = "https://github.com/chavithra/degiro-connector"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "types-requests>=2.32.4.20250809",
]
qrcode = [
    "opencv-python>=4.12.0.88",
]
quotecast = [
    "polars>=1.33.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
